@@ -4,6 +4,8 @@ LABEL Nima Karimipour <karimipour.nima@gmail.com>
 
 RUN apk add --no-cache curl tar bash procps
 
+
+# Install Maven
 ARG MAVEN_VERSION=3.6.3
 ARG USER_HOME_DIR="/root"
 ARG SHA=c35a1803a6e70a126e80b2b3ae33eed961f83ed74d18fcd16909b2d44d7dada3203f1ffe726c17ef8dcca2dcaa9fca676987befeadc9b9f759967a8cb77181c0
@@ -26,18 +28,10 @@ RUN mkdir -p /usr/share/maven /usr/share/maven/ref \
 ENV MAVEN_HOME /usr/share/maven
 ENV MAVEN_CONFIG "$USER_HOME_DIR/.m2"
 
-# Downloading and installing Gradle
-# 1- Define a constant with the version of gradle you want to install
+#Install Gradle
 ARG GRADLE_VERSION=6.8.3
-
-# 2- Define the URL where gradle can be downloaded from
 ARG GRADLE_BASE_URL=https://services.gradle.org/distributions
-
-# 3- Define the SHA key to validate the gradle download
-#    obtained from here https://gradle.org/release-checksums/
 ARG GRADLE_SHA=7faa7198769f872826c8ef4f1450f839ec27f0b4d5d1e51bade63667cbccd205
-
-# 4- Create the directories, download gradle, validate the download, install it, remove downloaded file and set links
 RUN mkdir -p /usr/share/gradle /usr/share/gradle/ref \
   && echo "Downlaoding gradle hash" \
   && curl -fsSL -o /tmp/gradle.zip ${GRADLE_BASE_URL}/gradle-${GRADLE_VERSION}-bin.zip \
@@ -51,21 +45,38 @@ RUN mkdir -p /usr/share/gradle /usr/share/gradle/ref \
   && echo "Cleaning and setting links" \
   && rm -f /tmp/gradle.zip \
   && ln -s /usr/share/gradle/gradle-${GRADLE_VERSION} /usr/bin/gradle
-
-# 5- Define environmental variables required by gradle
 ENV GRADLE_VERSION 6.8.3
 ENV GRADLE_HOME /usr/bin/gradle
 ENV GRADLE_USER_HOME /cache
-
 ENV PATH $PATH:$GRADLE_HOME/bin
-
 VOLUME $GRADLE_USER_HOME
+
 
 # Install python
 RUN apk add --update python
 
 # Install git
 RUN apk add --update git
+
+#Install Android SDK
+ARG ANDROID_SDK_VERSION=6858069
+ENV ANDROID_SDK_ROOT /opt/android-sdk
+RUN mkdir -p ${ANDROID_SDK_ROOT}/cmdline-tools && \
+    wget -q https://dl.google.com/android/repository/commandlinetools-linux-${ANDROID_SDK_VERSION}_latest.zip && \
+    unzip *tools*linux*.zip -d ${ANDROID_SDK_ROOT}/cmdline-tools && \
+    mv ${ANDROID_SDK_ROOT}/cmdline-tools/cmdline-tools ${ANDROID_SDK_ROOT}/cmdline-tools/tools && \
+    rm *tools*linux*.zip
+
+# set the environment variables
+ENV PATH ${PATH}:${ANDROID_SDK_ROOT}/cmdline-tools/latest/bin:${ANDROID_SDK_ROOT}/cmdline-tools/tools/bin:${ANDROID_SDK_ROOT}/platform-tools:${ANDROID_SDK_ROOT}/emulator
+ENV _JAVA_OPTIONS -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap
+ENV LD_LIBRARY_PATH ${ANDROID_SDK_ROOT}/emulator/lib64:${ANDROID_SDK_ROOT}/emulator/lib64/qt/lib
+ENV QTWEBENGINE_DISABLE_SANDBOX 1
+# accept the license agreements of the SDK components
+ADD license_accepter.sh /opt/
+RUN chmod +x /opt/license_accepter.sh && /opt/license_accepter.sh $ANDROID_SDK_ROOT
+
+
 
 # Script to run
 RUN mkdir -p /var/diagnoser/
